# yzlmprv-cpp-template-basic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_cmake.md
.github/: bug_report.md
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: CompilerOptions.cmake  Config.cmake  InsourceGuard.cmake  StandardOptions.cmake  TargetOSSetup.cmake
gitconfigs/: .gitconfig
lib/: CMakeLists.txt
lib/include/: function_lib.h
lib/src/: function_lib.cpp
scripts/: build.bat  build.sh  list_presets.sh  runTests.bat  runTests.sh  run_tests.sh
test/: CMakeLists.txt
test/src/: test_function_lib.cpp
